// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-usermotion destination: identify action - all fields 1`] = `
Object {
  "id": "L[L@D",
  "properties": Object {
    "anonymousId": "L[L@D",
    "email": "duz@raomopiw.to",
    "testType": "L[L@D",
  },
}
`;

exports[`Testing snapshot for actions-usermotion destination: identify action - required fields 1`] = `
Object {
  "id": "L[L@D",
  "properties": Object {
    "email": "duz@raomopiw.to",
  },
}
`;
